[tool.poetry]
name = "baserun-demo"
version = "0.1.0"
description = ""
authors = ["Erik Peterson <e@eriklp.com>"]
packages = [{ include = "demo" }]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.3"
langchain = "^0.0.285"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
psutil = "^5.9.5"
wikipedia = "^1.4.0"
google-search-results = "^2.4.2"
baserun = "^0.5.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
