[tool.poetry]
name = "baserun-demo"
version = "0.1.0"
description = ""
authors = ["Erik Peterson <e@eriklp.com>"]
packages = [{ include = "demo" }]

readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
langchain = "^0.0.285"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
wikipedia = "^1.4.0"
google-search-results = "^2.4.2"
baserun = { path = "/Users/epeterson/src/baserun/baserun-py", develop = true }
anthropic = "^0.3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
